done with lec 2

--- a/Day_01/main.ipynb
+++ b/Day_01/main.ipynb
@@ -224,21 +224,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n"
+      "13\n"
      ]
     }
    ],
    "source": [
-    "a = 5\n",
+    "a = 5 \n",
     "b =6\n",
-    "print(a+b)"
+    "a=7\n",
+    "c = a+b \n",
+    "print(f\"{a+b}\")"
    ]
   },
   {
@@ -307,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -315,12 +317,48 @@
      "output_type": "stream",
      "text": [
       "Despite the rain pouring heavily outside, and the wind howling fiercely through the trees.\n",
-      " Sarah, determined and full of ambition, ventured out to the old bookstore in the heart of the city, hoping to find that one rare, out-of-print novel she had been searching for for years, knowing that this could be her last chance to discover it before the bookstore closed down for good, leaving behind only memories of its cozy, nostalgic atmosphere, the smell of aged paper, and the joy of stumbling upon forgotten treasures in the quiet corners of the dusty shelves.\n"
+      " Sarah, determined and full of ambition, ventured out to the old bookstore in the heart of the city, hoping to find that one rare\n",
+      " out-of-print novel she had been searching for for years, knowing that this could be her last chance to discover it before the bookstore closed down for good, leaving behind only memories of its cozy, nostalgic atmosphere, the smell of aged paper, and the joy of stumbling upon forgotten treasures in the quiet corners of the dusty shelves.\n"
      ]
     }
    ],
    "source": [
     "print(\"Despite the rain pouring heavily outside, and the wind howling fiercely through the trees.\\n Sarah, determined and full of ambition, ventured out to the old bookstore in the heart of the city, hoping to find that one rare\\n out-of-print novel she had been searching for for years, knowing that this could be her last chance to discover it before the bookstore closed down for good, leaving behind only memories of its cozy, nostalgic atmosphere, the smell of aged paper, and the joy of stumbling upon forgotten treasures in the quiet corners of the dusty shelves.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m (\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter you number :\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m----> 2\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[43ma\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m \n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(b) \n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "a = (input(\"Enter you number :\"))\n",
+    "b = a+5 \n",
+    "print(b) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ```\\n ``` is use for new line "
    ]
   }
  ],
